@@ -73,10 +73,10 @@ $PLATFORM_INFO = {
   "freebsd-5"       => "FreeBSD 5",
   "gentoo"          => "Gentoo Linux",
   "pld-1.0"         => "PLD 1.0 Ra",
-	"pld-1.1"         => "PLD 1.1 Ra",
-	"pld-1.99"        => "PLD 1.99 Ac-pre",
-  "fedora-1"        => "Fedora Core 1 (Yarrow)"
-  "fedora-1"        => "Fedora Core 2 (Tettnang)"
+  "pld-1.1"         => "PLD 1.1 Ra",
+  "pld-1.99"        => "PLD 1.99 Ac-pre",
+  "fedora-1"        => "Fedora Core 1 (Yarrow)",
+  "fedora-2"        => "Fedora Core 2 (Tettnang)"
 };
   
 sub check_lsb
